Relative URL in index.html.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <title>Gitboard</title>
 
-    <link rel="stylesheet" type="text/css" href="/static/css/all.min.css" />
+    <link rel="stylesheet" type="text/css" href="static/css/all.min.css" />
 
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
